add: starter page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-.App {
-  text-align: center;
-}
+/*
+  This CSS is used for spinning logo only.
+  If not in use, you can delete this.
+*/
 
 .App-logo {
   height: 40vmin;
@@ -11,21 +12,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
